[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://recorder.png" type="Texture" id=2]
[ext_resource path="res://3DGodotRobot.glb" type="PackedScene" id=3]
[ext_resource path="res://UIcomponents/PlayerHud.gd" type="Script" id=4]
[ext_resource path="res://Clone1.gd" type="Script" id=5]
[ext_resource path="res://Clone2.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.21895, 0.208393, 0.297853 )

[sub_resource type="CubeMesh" id=5]

[sub_resource type="ProceduralSky" id=8]
ground_bottom_color = Color( 0.12549, 0.0941176, 0.180392, 1 )

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 8 )
fog_enabled = true
fog_color = Color( 0.505882, 0.301961, 0.635294, 1 )
fog_depth_begin = 20.0
fog_depth_end = 150.0
dof_blur_far_enabled = true
dof_blur_far_distance = 50.0

[sub_resource type="Animation" id=6]
resource_name = "ChangeToFarFov"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 0.378929, 0.378929 ),
"update": 0,
"values": [ 70.0, 80.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 70.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 10, 15, 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -45, 45, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:environment:dof_blur_far_distance")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 50.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "SetTopView"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Vector3( 10, 15, 10 ), Vector3( 0, 50, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Vector3( -45, 45, 0 ), Vector3( -90, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera:fov")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ 70.0, 60.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:environment:dof_blur_far_distance")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ 50.0, 70.0 ]
}

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00103474, -0.00498891, 0.00168419 )
collision_layer = 11
collision_mask = 9
script = ExtResource( 1 )

[node name="Pivot" type="Spatial" parent="."]

[node name="3DGodotRobot" parent="Pivot" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0510019, -0.0582552, -0.0162497 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 2, 0, 0, 0, 4.9, 0, 0, 0, 2, 0, 1.02785, 0 )
shape = SubResource( 2 )

[node name="GrabbedObjectPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="MeshInstance" type="MeshInstance" parent="GrabbedObjectPivot"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 5 )

[node name="PathTrailPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.66038, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 10, 15, 10 )
environment = SubResource( 4 )
far = 400.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 5.0
anims/ChangeToFarFov = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/SetTopView = SubResource( 9 )

[node name="PlayerHUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="Clone1" type="Sprite" parent="PlayerHUD"]
position = Vector2( 857, 535 )
scale = Vector2( 0.154297, 0.154297 )
texture = ExtResource( 2 )
script = ExtResource( 5 )

[node name="Clone2" type="Sprite" parent="PlayerHUD"]
position = Vector2( 178, 537 )
scale = Vector2( 0.167969, 0.167969 )
texture = ExtResource( 2 )
script = ExtResource( 6 )

[connection signal="hud_cloning1" from="." to="PlayerHUD/Clone1" method="_on_Player_hud_cloning1"]
[connection signal="hud_cloning2" from="." to="PlayerHUD/Clone2" method="_on_Player_hud_cloning2"]
[connection signal="hud_not_cloning1" from="." to="PlayerHUD/Clone1" method="_on_Player_hud_not_cloning1"]
[connection signal="hud_not_cloning2" from="." to="PlayerHUD/Clone2" method="_on_Player_hud_not_cloning2"]
